# Discord-Bot

./: .gitignore  README.md  aplcoms.py  autorespond.py  fun.py  info.py  keep_alive.py  main.py  moderation.py  music.py  pyproject.toml  quotes.py  school.py  zoom.py
.cache/replit/: __replit_disk_meta.json
json/: animals.json  copypasta.txt  covid.txt  emojis.json  exempt.txt  files.json  links.json  pickuplines.json  son.json
json/popquotes/: Hamilton_Quotes.json  jojo.json  officequotes.json
json/quotes/: austin.txt  dhruv.txt  ian.txt  jeff.txt  shelley.txt  trevor.txt  walter.txt  yousef.txt
templates/: extra.html  home.html
